tests/driver/pass/impl_across_files/main.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

import "first.bom";
import "second.bom";
import "third.bom";

func main() ret int32 {
    let t = alloc T{x:12, y:13, z: 5};
    let n = t->max();
    assert n == 13;
    t->increase();
    let n = t->max();
    assert n == 14;
    return 0;
}
