tests/driver/fail/mangled_name_reuse/test.cpm
(* Copyright 2023 Enrico Granata *)
(* *)
(* Licensed under the Apache License, Version 2.0 (the "License"); *)
(* you may not use this file except in compliance with the License. *)
(* You may obtain a copy of the License at *)
(*  *)
(*     http://www.apache.org/licenses/LICENSE-2.0 *)
(*  *)
(* Unless required by applicable law or agreed to in writing, software *)
(* distributed under the License is distributed on an "AS IS" BASIS, *)
(* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *)
(* See the License for the specific language governing permissions and *)
(* limitations under the License. *)

func __X__7wrapper__3get() ret int32 {
    return 12;
}

ref type wrapper {
    x: int64,
    init(x: int64) {
        self.x = x;
    }
}

impl wrapper {
    func get() ret int64 {
        return self.x;
    }
    func increment() {
        inc self.x;
    }
}

func main() ret int32 {
    let w = alloc wrapper(3);
    w->increment();
    return w->get() as int32;
}
